<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/width_height_parents"
    android:background="@color/background"
    android:id="@+id/fragment_container">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:scaleType="centerCrop"
        />

    <ScrollView
        style="@style/width_height_parents">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
               style="@style/width_height_parents"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin_start_end_top"
                    android:layout_marginTop="50dp"

                    android:text="@string/city"
                    android:textColor="@color/textCityColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin_start_end_top"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/margin_start_end_top"
                    android:text="@string/temp"
                    android:textColor="@color/textCityColor"
                    android:textSize="50sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.488"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

                <EditText
                    android:id="@+id/textToken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="Push message!"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

                <TextView
                    android:id="@+id/textViewDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/today"
                    android:textColor="@color/textCityColor"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textToken" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/date"
                    app:layout_constraintBottom_toTopOf="@+id/textViewDay"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewWeatherHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDay" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewWeatherDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewWeatherHour" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>